--- a/app/globals.css
+++ b/app/globals.css
@@ -3,8 +3,8 @@
 @tailwind utilities;
 
 :root {
-  --background: #171717;
-  --foreground: #ffffff;
+  --background:#F8F8FF;
+  --foreground: #000000;
 }
 
 @media (prefers-color-scheme: dark) {
